move stars behind proj gallery and fix rocket drag bounds

--- a/public/style.css
+++ b/public/style.css
@@ -204,6 +204,7 @@ input {
   width: 350px;
   margin: 32px 128px;
   position: relative;
+  z-index: 2;
 }
 
 .project-description {
